Fix subnav not redirecting when collapsed

--- a/BlazorLanguageLearningApp/Client/Pages/Sets.razor.css
+++ b/BlazorLanguageLearningApp/Client/Pages/Sets.razor.css
@@ -14,9 +14,13 @@
     }
 }
 
-.breadcrumb {
-    font-size: 1.25rem;
+@media (width>=992px) {
+    .breadcrumb {
+        font-size: 1.25rem;
+    }
 }
+
+
 
 
 
